--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
             color: #333;
         }
     </style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5VF5K7YXDY"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-5VF5K7YXDY');
+    </script>
 </head>
 <body>
     <h1>Welcome to the Dummy Website</h1>
